@@ -8,7 +8,11 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
-EB-2011-04-08-0: Bugfix:      Auto installation rejects ADMIN_MAIL parameter 
+DG-2011-04-08-0: Bugfix:      qstat shows in binding field "unknown unknown"
+                 Issue:       GE-3432
+                 Review:      EB
+
+EB-2011-04-08-0: Bugfix:      Auto installation rejects ADMIN_MAIL parameter
                               although it is correct
                  Issue:       GE-3423
                  Review:      DG
